<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email_label"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_state" />

    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="195dp"
        android:layout_height="47dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:prompt="@string/area_label"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_city" />

    <Spinner
        android:id="@+id/spinner_area"
        android:layout_width="107dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:prompt="@string/area_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/edit_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_zip"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:hint="@string/zip_label"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/spinner_state"
        app:layout_constraintTop_toBottomOf="@+id/edit_city" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_birthday"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/birthday_label"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_city"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/city_label"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_address"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/address_label"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_phone"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_label"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_name"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:hint="@string/name_label"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="saveUser"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday"
        app:layout_constraintVertical_bias="0.109" />


</androidx.constraintlayout.widget.ConstraintLayout>